syntax="proto3";

package users.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// Defines the import path that should be used to import the generated package and name.
option go_package = "github.com/jmandel1027/perspex/schemas/proto/goproto/pkg/users;users";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://github.com/jmandel1027/perspex";
    description: "pespex";
  }
  schemes: HTTPS;
};

message EchoRequest {
  string value = 1;
}

message EchoResponse {
  string value = 1;
}

service UserService {
  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/v1/users/echo"
      body: "*"
    };
  }
}

message User {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {};

  int64 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "User ID."}];
  string email = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "User Email"}];
}